--- a/public/landingLogin.css
+++ b/public/landingLogin.css
@@ -20,16 +20,18 @@ body {
    top: 15%;
    left: 25%;
    right: 25%;
+   text-shadow: 0px 4px 3px rgba(0, 0, 0, .3), 0px 8px 13px rgba(0, 0, 0, .2), 0px 18px 23px rgba(0, 0, 0, .1);
 }
 
 #brand {
-   color: white;
+   color: whitesmoke;
    font-size: 8rem;
+   font-weight: 400;
 }
 
 #motivation {
-   color: turquoise;
-   font-size: 2.5rem;
+   color: whitesmoke;
+   font-size: 2rem;
 }
 
 form {
