--- a/public/landingLogin.css
+++ b/public/landingLogin.css
@@ -17,7 +17,7 @@ body {
    z-index: 1;
    position: fixed;
    width: auto;
-   top: 15%;
+   top: 10%;
    left: 25%;
    right: 25%;
    text-shadow: 0px 4px 3px rgba(0, 0, 0, .3), 0px 8px 13px rgba(0, 0, 0, .2), 0px 18px 23px rgba(0, 0, 0, .1);
@@ -25,13 +25,13 @@ body {
 
 #brand {
    color: whitesmoke;
-   font-size: 8rem;
+   font-size: 9vw;
    font-weight: 400;
 }
 
 #motivation {
    color: whitesmoke;
-   font-size: 2rem;
+   font-size: 2.5vw;
 }
 
 form {
@@ -42,7 +42,7 @@ form {
    background-color: rgb(237, 237, 237);
    background-color: hsla(0, 0%, 93%, 0.808);
    width: auto;
-   top: 45%;
+   top: 50%;
    left: 25%;
    right: 25%;
    position: fixed;
