--- a/public/css/landingLogin.css
+++ b/public/css/landingLogin.css
@@ -13,7 +13,9 @@ body {
 }
 
 #headerText {
-   padding: auto;
+   padding-top: 5%;
+   text-align: center;
+   vertical-align: middle;
    z-index: 1;
    position: fixed;
    width: auto;
