--- a/views/landingLogin.html
+++ b/views/landingLogin.html
@@ -6,9 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>PickUp</title>
-	<link rel="stylesheet" href="../css/landingLogin.css">
-	<link rel="stylesheet" href="../css/bootstrap-material-design.css">
-	<link href="https://fonts.googleapis.com/css?family=Muli:300,400" rel="stylesheet">
+	<link rel="stylesheet" href="C:\Users\Samuel\Documents\School\CSCI3100\Project\pick-up\public\css\landingLogin.css">
+	<link rel="stylesheet" href="C:\Users\Samuel\Documents\School\CSCI3100\Project\pick-up\public\css\bootstrap-material-design.css">
 </head>
 
 <body>
@@ -48,13 +47,19 @@
 		</div>
 	</nav>
 
-	<div id="headerText" class="container text-center">
-		<h1 id="brand">
-			PickUp
-		</h1>
-		<h3 id="motivation">
-			Connecting our campus, one activity at a time.
-		</h3>
+	<div class="container myTitle">
+		<div id="headerText">
+			<div class="row">
+				<div class="col-lg-12">
+					<h1 id="brand">
+						PickUp
+					</h1>
+					<h3 id="motivation">
+						Connecting our campus, one activity at a time.
+					</h3>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- carousel -->
@@ -85,26 +90,28 @@
 	</div>
 
 
-	<div class="col-lg-4 col-md-6 col-sm-10">
-		<div class=" row ">
-			<div id="myCard " class="card w-75 ">
-				<!-- Form input(posts) -->
-				<form action="/login" method="post">
-					<div class="form-group ">
-						<label for="EmailInput ">Email</label>
-						<input type="email " name="email" placeholder="email" class="form-control " id="emailInput" aria-describedby="emailHelp " placeholder="johndoe@university.edu "
-						   required>
-					</div>
-					<div class="form-group ">
-						<label for="Passwordinput ">Password</label>
-						<input type="password" name="password" class="form-control " id="passwordInput" placeholder="Password " required>
-					</div>
-					<div class="form-group ">
-						<label for="confirmPass ">Confirm Password</label>
-						<input type="password" name="confirm" class="form-control " id="confirmPassword" placeholder="Confirm Password " required>
-					</div>
-					<button id="login" type="submit " class="btn btn-primary btn-md active float-right ">Submit</button>
-				</form>
+	<div class="container">
+		<div class="col-lg-12">
+			<div class=" row ">
+				<div id="myCard " class="card w-75 ">
+					<!-- Form input(posts) -->
+					<form action="/login" method="post">
+						<div class="form-group ">
+							<label for="EmailInput ">Email</label>
+							<input type="email " name="email" placeholder="Email" class="form-control " id="emailInput" aria-describedby="emailHelp "
+							   required>
+						</div>
+						<div class="form-group ">
+							<label for="Passwordinput ">Password</label>
+							<input type="password" name="password" class="form-control " id="passwordInput" placeholder="Password " required>
+						</div>
+						<div class="form-group ">
+							<label for="confirmPass ">Confirm Password</label>
+							<input type="password" name="confirm" class="form-control " id="confirmPassword" placeholder="Confirm Password " required>
+						</div>
+						<button id="login" type="submit " class="btn btn-primary btn-md active float-right ">Submit</button>
+					</form>
+				</div>
 			</div>
 		</div>
 
@@ -112,7 +119,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl "
 	   crossorigin="anonymous "></script>
-   	<script src="../clientjs/passwordValidate.js "></script>
+	<script src="../clientjs/passwordValidate.js "></script>
 </body>
 
 </html>
