--- a/views/landingLogin.html
+++ b/views/landingLogin.html
@@ -47,7 +47,7 @@
 		</div>
 	</nav>
 
-	<div class="container myTitle">
+	<div class="container">
 		<div id="headerText">
 			<div class="row">
 				<div class="col-lg-12">
