display-matches: Fill up the matches table.

--- a/views/display-matches.html
+++ b/views/display-matches.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="../css/starter-template.css" rel="stylesheet">
+    <link href="../public/css/starter-template.css" rel="stylesheet">
   </head>
 
   <body>
@@ -61,31 +61,39 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">Nickname</th>
-              <th scope="col">Username</th>
-              <th scope="col">Handle</th>
+              <th scope="col"></th>
+              <th scope="col">Activity</th>
+              <th scope="col">Name</th>
+              <th scope="col">Matching time slot</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-              <td>@mdo</td>
+              <th><img src="../public/icons/whois-icon.png" class="img-fluid"></th>
+              <td>Football</td>
+              <td>John</td>
+              <td>10:30 am - 11:30 am</td>
+              <td>
+                <button type="button" class="btn btn-success">CONFIRM</button>
+              <td/>
             </tr>
             <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
+              <th><img src="../public/icons/whois-icon.png" class="img-fluid"></th>
+                <td>Basketball</td>
+              <td>Marry</td>
+              <td>2:30 pm - 3:30 pm</td>
+              <td>
+                <button type="button" class="btn btn-success">CONFIRM</button>
+              <td/>
             </tr>
             <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
+              <th><img src="../public/icons/whois-icon.png" class="img-fluid"></th>
+              <td>Badminton</td>
+              <td>Peter</td>
+              <td>7:30 pm - 8:30 pm</td>
+              <td>
+                <button type="button" class="btn btn-success">CONFIRM</button>
+              <td/>
             </tr>
           </tbody>
         </table>
