ProfilePage: Fix image links.

--- a/views/ProfilePage.html
+++ b/views/ProfilePage.html
@@ -50,7 +50,7 @@
             <div class="well well-sm">
                 <div class="row">
                   <div class="media">
-                    <img class="img-thumbnail" src="../thumbnail-images/Profile-avatar-placeholder-large.png" style="height:30%; width: 35%;" alt="Generic placeholder image"/>
+                    <img class="img-thumbnail" src="../public/thumbnail-images/Profile-avatar-placeholder-large.png" style="height:30%; width: 35%;" alt="Generic placeholder image"/>
                     <div class="media-body">
 
 
@@ -60,22 +60,22 @@
                     <div class="container col-sm-6 col-md-8" >
                         <h4 class="user-name" >
                             Name of User</h4>
-                        <small><cite title="Location">CUHK, Hong Kong</cite> <img src = "../icons/location.png" /></small>
+                        <small><cite title="Location">CUHK, Hong Kong</cite> <img src = "../public/icons/location.png" /></small>
 
                         <p>
 
-                        example@link.cuhk.edu.hk   <img src="../icons/envelope-closed.svg" alt="envelope-closed"  />
+                        example@link.cuhk.edu.hk   <img src="../public/icons/envelope-closed.svg" alt="envelope-closed"  />
                             <br />
 
 
 
-                            Hiking <img src="../icons/hiking.png"/>
+                            Hiking <img src="../public/icons/hiking.png"/>
                             <br />
-                            Cooking <img src="../icons/cooking.png"/>
+                            Cooking <img src="../public/icons/cooking.png"/>
                             <br />
-                            Tennis <img src="../icons/tennis.png"/>
+                            Tennis <img src="../public/icons/tennis.png"/>
                             <br />
-                            Badminton <img src="../icons/badminton.png"/>
+                            Badminton <img src="../public/icons/badminton.png"/>
                             <br />
 
 
