ProfilePage: Fix css links.

--- a/views/ProfilePage.html
+++ b/views/ProfilePage.html
@@ -1,11 +1,11 @@
 
 
-<link rel="stylesheet" href="../css/landinglogin.css">
+<link rel="stylesheet" href="../public/css/landinglogin.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<link href="../css/profile.css" rel="stylesheet" id="bootstrap-css">
+<link href="../public/css/profile.css" rel="stylesheet" id="bootstrap-css">
 
 <!------ Include the above in your HEAD tag ---------->
 <body>
