Changed the CSS link

--- a/views/landingLogin.html
+++ b/views/landingLogin.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>PickUp</title>
-	<link rel="stylesheet" href="C:\Users\Samuel\Documents\School\CSCI3100\Project\pick-up\public\css\landingLogin.css">
-	<link rel="stylesheet" href="C:\Users\Samuel\Documents\School\CSCI3100\Project\pick-up\public\css\bootstrap-material-design.css">
+	<link rel="stylesheet" href="../css/landinglogin.css">
+	<link rel="stylesheet" href="../css/bootstrap-material-design.css">
 </head>
 
 <body>
@@ -94,7 +94,7 @@
 		<div class="col-lg-12">
 			<div class=" row ">
 				<div id="myCard " class="card w-75 ">
-					<!-- Form input(posts) -->
+					<!-- Form input(posts) Sign up for account -->
 					<form action="/login" method="post">
 						<div class="form-group ">
 							<label for="EmailInput ">Email</label>
