--- a/views/schedule.html
+++ b/views/schedule.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 
     <title>Pick-Up Schedule</title>
@@ -14,8 +13,6 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="../css/starter-template.css" rel="stylesheet">
-
     <script src="https://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
     <link href="https://cdn.alloyui.com/3.0.1/aui-css/css/bootstrap.min.css" rel="stylesheet"></link>
     <script>YUI().use(
@@ -115,8 +112,8 @@
             </div>
         </div>
     </nav>
-
-    <div id="wrapper">
+    <div class="wrapper">
+      Here is your schedule:
       <div id="myScheduler"></div>
     </div>
 
