--- a/views/display-matches.html
+++ b/views/display-matches.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../public/icons/favicon.ico">
+    <link rel="icon" href="../icons/favicon.ico">
 
     <title>Matches</title>
 
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="../public/css/starter-template.css" rel="stylesheet">
+    <link href="../css/starter-template.css" rel="stylesheet">
   </head>
 
   <body>
@@ -69,7 +69,7 @@
           </thead>
           <tbody>
             <tr>
-              <th><img src="../public/icons/whois-icon.png" class="img-fluid"></th>
+              <th><img src="../icons/whois-icon.png" class="img-fluid"></th>
               <td>Football</td>
               <td>John</td>
               <td>10:30 am - 11:30 am</td>
@@ -78,7 +78,7 @@
               <td/>
             </tr>
             <tr>
-              <th><img src="../public/icons/whois-icon.png" class="img-fluid"></th>
+              <th><img src="../icons/whois-icon.png" class="img-fluid"></th>
                 <td>Basketball</td>
               <td>Marry</td>
               <td>2:30 pm - 3:30 pm</td>
@@ -87,7 +87,7 @@
               <td/>
             </tr>
             <tr>
-              <th><img src="../public/icons/whois-icon.png" class="img-fluid"></th>
+              <th><img src="../icons/whois-icon.png" class="img-fluid"></th>
               <td>Badminton</td>
               <td>Peter</td>
               <td>7:30 pm - 8:30 pm</td>
