--- a/views/landingLogin.html
+++ b/views/landingLogin.html
@@ -68,23 +68,23 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active image">
 				<img class="d-block w-100 carousel-img " src="https://images.unsplash.com/photo-1482195740274-e367dbcdb9c6?ixlib=rb-0.3.5&s=e4bd558d074bbe3c74ae67e3beaa88c8&auto=format&fit=crop&w=1489&q=80"
-				  alt="first slide ">
+				   alt="first slide ">
 			</div>
 			<div class="carousel-item image">
 				<img class="d-block w-100 carousel-img " src="https://images.unsplash.com/photo-1461748659110-16121c049d52?ixlib=rb-0.3.5&s=aa04a98ee857d3930a5bae9913db097c&auto=format&fit=crop&w=1050&q=80 "
-				  alt="second slide ">
+				   alt="second slide ">
 			</div>
 			<div class="carousel-item image ">
 				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1519205913750-9c627cff59dd?ixlib=rb-0.3.5&s=a6f623081b723d64b3913ae42471f4f2&auto=format&fit=crop&w=1094&q=80 "
-				  alt="third slide ">
+				   alt="third slide ">
 			</div>
 			<div class="carousel-item image ">
 				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1460132011327-1bcd44f7ae20?ixlib=rb-0.3.5&s=50179d7b514422f3641e5e044684435d&auto=format&fit=crop&w=1050&q=80 "
-				  alt="fourth slide ">
+				   alt="fourth slide ">
 			</div>
 			<div class="carousel-item image ">
-				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1499858476316-343e284f1f67?ixlib=rb-0.3.5&s=4985c13dbbf85d7d0f5b90df50ea8695&auto=format&fit=crop&w=1050&q=80 "
-				  alt="fifth slide ">
+				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1499858476316-343e284f1f67?ixlib=rb-0.3.5&s=4985c13dbbf85d7d0f5b90df50ea8695&auto=forqmat&fit=crop&w=1050&q=80 "
+				   alt="fifth slide ">
 			</div>
 		</div>
 	</div>
@@ -99,7 +99,7 @@
 						<div class="form-group ">
 							<label for="EmailInput ">Email</label>
 							<input type="email " name="email" placeholder="Email" class="form-control " id="emailInput" aria-describedby="emailHelp "
-							  required>
+							   required>
 						</div>
 						<div class="form-group ">
 							<label for="Passwordinput ">Password</label>
@@ -119,7 +119,7 @@
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl "
-	  crossorigin="anonymous "></script>
+	   crossorigin="anonymous "></script>
 	<script src="../clientjs/passwordValidate.js "></script>
 </body>
 
