--- a/views/landingLogin.html
+++ b/views/landingLogin.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>PickUp</title>
-	<link rel="stylesheet" href="../css/landinglogin.css">
+	<link rel="stylesheet" href="../css/landingLogin.css">
 	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
 </head>
 
