Added html doctype tag

--- a/views/ProfilePage.html
+++ b/views/ProfilePage.html
@@ -1,108 +1,122 @@
-
+<!DOCTYPE html>
+<html lang="en">
 
 <link rel="stylesheet" href="../css/landinglogin.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
-<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
+    integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <link href="../css/profile.css" rel="stylesheet" id="bootstrap-css">
 
 <!------ Include the above in your HEAD tag ---------->
+
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-		<div class="container ">
-			<a class="navbar-brand " href="/">PickUp</a>
-			<button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent
+        <div class="container ">
+            <a class="navbar-brand " href="/">PickUp</a>
+            <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent
 			" aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
-				<span class="navbar-toggler-icon "></span>
-			</button>
+                <span class="navbar-toggler-icon "></span>
+            </button>
 
-			<div class="collapse navbar-collapse " id="navbarSupportedContent ">
-				<div class="container ">
-					<ul class="navbar-nav mr-auto ">
-						<li class="nav-item active ">
-							<a class="nav-link " href="/profile">Profile
-								<span class="sr-only ">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link " href="/schedule">My Schedule</a>
-						</li>
-						<li class="nav-item dropdown ">
-							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true "
-							   aria-expanded="false ">
-								Options
-							</a>
-							<div class="dropdown-menu " aria-labelledby="navbarDropdown">
-								<a class="dropdown-item " href="/report">Report User</a>
-								<a class="dropdown-item " href="#">Another action</a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</nav>
+            <div class="collapse navbar-collapse " id="navbarSupportedContent ">
+                <div class="container ">
+                    <ul class="navbar-nav mr-auto ">
+                        <li class="nav-item active ">
+                            <a class="nav-link " href="/profile">Profile
+                                <span class="sr-only ">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link " href="/schedule">My Schedule</a>
+                        </li>
+                        <li class="nav-item dropdown ">
+                            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true "
+                                aria-expanded="false ">
+                                Options
+                            </a>
+                            <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item " href="/report">Report User</a>
+                                <a class="dropdown-item " href="#">Another action</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6">
-            <div class="well well-sm">
-                <div class="row">
-                  <div class="media">
-                    <img class="img-thumbnail" src="../thumbnail-images/Profile-avatar-placeholder-large.png" style="height:30%; width: 35%;" alt="Generic placeholder image"/>
-                    <div class="media-body">
-
-
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="media">
+                            <img class="img-thumbnail" src="../thumbnail-images/Profile-avatar-placeholder-large.png" style="height:30%; width: 35%;"
+                                alt="Generic placeholder image" />
+                            <div class="media-body">
 
 
-                    <div class="container col-sm-6 col-md-8" >
-                        <h4 class="user-name" >
-                            Name of User</h4>
-                        <small><cite title="Location">CUHK, Hong Kong</cite> <img src = "../icons/location.png" /></small>
-
-                        <p>
-
-                        example@link.cuhk.edu.hk   <img src="../icons/envelope-closed.svg" alt="envelope-closed"  />
-                            <br />
+                            </div>
 
 
+                            <div class="container col-sm-6 col-md-8">
+                                <h4 class="user-name">
+                                    Name of User</h4>
+                                <small>
+                                    <cite title="Location">CUHK, Hong Kong</cite>
+                                    <img src="../icons/location.png" />
+                                </small>
 
-                            Hiking <img src="../icons/hiking.png"/>
-                            <br />
-                            Cooking <img src="../icons/cooking.png"/>
-                            <br />
-                            Tennis <img src="../icons/tennis.png"/>
-                            <br />
-                            Badminton <img src="../icons/badminton.png"/>
-                            <br />
+                                <p>
+
+                                    example@link.cuhk.edu.hk
+                                    <img src="../icons/envelope-closed.svg" alt="envelope-closed" />
+                                    <br /> Hiking
+                                    <img src="../icons/hiking.png" />
+                                    <br /> Cooking
+                                    <img src="../icons/cooking.png" />
+                                    <br /> Tennis
+                                    <img src="../icons/tennis.png" />
+                                    <br /> Badminton
+                                    <img src="../icons/badminton.png" />
+                                    <br />
 
 
-                          </p>
-                        <!-- Split button -->
-                        <div class="btn-group">
+                                </p>
+                                <!-- Split button -->
+                                <div class="btn-group">
 
-                                <button type="button" class="btn btn-primary" style="padding-left:50px;">
-                                    Add more interests
-                                </button>
+                                    <button type="button" class="btn btn-primary" style="padding-left:50px;">
+                                        Add more interests
+                                    </button>
 
-                                <br>
-                                <button type="button" class="btn btn-primary">
-                                  View/Edit Schedule
-                                </button>
+                                    <br>
+                                    <button type="button" class="btn btn-primary">
+                                        View/Edit Schedule
+                                    </button>
 
+                                </div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
-<script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9"
+        crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            $('body').bootstrapMaterialDesign();
+        });
+    </script>
 </body>
+
+</html>
