--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -1,51 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<link rel="stylesheet" href="../css/landingLogin.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
-<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
-    integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<link href="../css/profile.css" rel="stylesheet" id="bootstrap-css">
-
+<%- include header.ejs %>
 <!------ Include the above in your HEAD tag ---------->
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-        <div class="container ">
-            <a class="navbar-brand " href="/">PickUp</a>
-            <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent
-			" aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
-                <span class="navbar-toggler-icon "></span>
-            </button>
-
-            <div class="collapse navbar-collapse " id="navbarSupportedContent ">
-                <div class="container ">
-                    <ul class="navbar-nav mr-auto ">
-                        <li class="nav-item active ">
-                            <a class="nav-link " href="/profile">Profile
-                                <span class="sr-only ">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="/schedule">My Schedule</a>
-                        </li>
-                        <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true "
-                                aria-expanded="false ">
-                                Options
-                            </a>
-                            <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item " href="/report">Report User</a>
-                                <a class="dropdown-item " href="#">Another action</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <link rel="stylesheet" href="../css/landingLogin.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
+        integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <link href="/css/profile.css" rel="stylesheet" id="bootstrap-css">
 
     <div class="container">
         <div class="row">
