--- a/views/display-matches.ejs
+++ b/views/display-matches.ejs
@@ -1,56 +1,6 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../icons/favicon.ico">
-
-    <title>Matches</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- Custom styles for this template -->
-    <link href="../css/starter-template.css" rel="stylesheet">
-  </head>
+<%- include header.ejs %>
 
   <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-  		<div class="container ">
-  			<a class="navbar-brand " href="/">PickUp</a>
-  			<button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent
-  			" aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
-  				<span class="navbar-toggler-icon "></span>
-  			</button>
-
-  			<div class="collapse navbar-collapse " id="navbarSupportedContent ">
-  				<div class="container ">
-  					<ul class="navbar-nav mr-auto ">
-  						<li class="nav-item active ">
-  							<a class="nav-link " href="/profile">Profile
-  								<span class="sr-only ">(current)</span>
-  							</a>
-  						</li>
-  						<li class="nav-item ">
-  							<a class="nav-link " href="/schedule">My Schedule</a>
-  						</li>
-  						<li class="nav-item dropdown ">
-  							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true "
-  							   aria-expanded="false ">
-  								Options
-  							</a>
-  							<div class="dropdown-menu " aria-labelledby="navbarDropdown">
-  								<a class="dropdown-item " href="/report">Report User</a>
-  								<a class="dropdown-item " href="#">Another action</a>
-  							</div>
-  						</li>
-  					</ul>
-  				</div>
-  			</div>
-  		</div>
-  	</nav>
 
     <main role="main" class="container">
 
