--- a/views/landingLogin.ejs
+++ b/views/landingLogin.ejs
@@ -1,52 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>PickUp</title>
-	<link rel="stylesheet" href="../css/landingLogin.css">
-	<link rel="stylesheet" href="../css/bootstrap-material-design.css">
-</head>
+<%- include header.ejs %>
 
 <body>
-	<!-- navbar -->
-	<nav class="navbar navbar-expand-md navbar-dark bg-primary">
-		<div class="container ">
-			<a class="navbar-brand " href="/">PickUp</a>
-			<button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent
-			" aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
-				<span class="navbar-toggler-icon "></span>
-			</button>
-
-			<div class="collapse navbar-collapse " id="navbarSupportedContent ">
-				<div class="container ">
-					<ul class="navbar-nav mr-auto ">
-						<li class="nav-item active ">
-							<a class="nav-link " href="/profile">Profile
-								<span class="sr-only ">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link " href="/schedule">My Schedule</a>
-						</li>
-						<li class="nav-item dropdown ">
-							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true "
-							   aria-expanded="false ">
-								Options
-							</a>
-							<div class="dropdown-menu " aria-labelledby="navbarDropdown">
-								<a class="dropdown-item " href="/report">Report User</a>
-								<a class="dropdown-item " href="#">Another action</a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</nav>
-
+	<link rel="stylesheet" href="/css/landingLogin.css">
 	<div class="container">
 		<div id="headerText">
 			<div class="row">
@@ -61,7 +16,6 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- carousel -->
 
 	<div class="carousel slide" data-interval="6000" data-ride="carousel">
@@ -83,7 +37,7 @@
 				   alt="fourth slide ">
 			</div>
 			<div class="carousel-item image ">
-				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1499858476316-343e284f1f67?ixlib=rb-0.3.5&s=4985c13dbbf85d7d0f5b90df50ea8695&auto=format&fit=crop&w=1050&q=80 "
+				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1499858476316-343e284f1f67?ixlib=rb-0.3.5&s=4985c13dbbf85d7d0f5b90df50ea8695&auto=forqmat&fit=crop&w=1050&q=80 "
 				   alt="fifth slide ">
 			</div>
 		</div>
@@ -94,10 +48,8 @@
 		<div class="col-lg-12">
 			<div class=" row ">
 				<div id="myCard " class="card w-75 ">
-					<!-- Form input(posts) log in to account -->
+					<!-- Form input(posts) Sign up for account -->
 					<form action="/login" method="post">
-						<!-- Form input(posts)
-					<form action="/sign" method="post">  This page is only for login, should not send signin info to backend-->
 						<div class="form-group ">
 							<label for="EmailInput ">Email</label>
 							<input type="email " name="email" placeholder="Email" class="form-control " id="emailInput" aria-describedby="emailHelp "
@@ -106,16 +58,12 @@
 						<div class="form-group ">
 							<label for="Passwordinput ">Password</label>
 							<input type="password" name="password" class="form-control " id="passwordInput" placeholder="Password " required>
-						</div>
-						<div class="form-group ">
-							<label for="confirmPass ">Confirm Password</label>
-							<input type="password" name="confirm" class="form-control " id="confirmPassword" placeholder="Confirm Password " required>
-						</div>
-						<div class="float-right spacing">
-							<button id="login" type="submit" class="btn btn-primary btn-md active ">Log-in</button>
-							<!-- this redirects to signup page -->
-							<label for="signupRedirect">OR </label>
-							<a href="#" class="btn btn-primary btn-md active btn-default">Sign-up!</a>
+							<div class="float-right spacing">
+								<button id="login" type="submit" class="btn btn-primary btn-md active ">Log-in</button>
+								<!-- this redirects to signup page -->
+								<label for="signupRedirect">OR </label>
+								<a href="/signUp" class="btn btn-primary btn-md active btn-default">Sign-up!</a>
+							</div>
 						</div>
 					</form>
 				</div>
