--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -1,6 +1,5 @@
-<!doctype html>
-<html>
-  <head>
+<%- include header.ejs %>
+<body>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -75,43 +74,8 @@
   }
 );
 </script>
-  </head>
-  <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-        <div class="container ">
-            <a class="navbar-brand " href="/">PickUp</a>
-            <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent
-            " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
-                <span class="navbar-toggler-icon "></span>
-            </button>
 
-            <div class="collapse navbar-collapse " id="navbarSupportedContent ">
-                <div class="container ">
-                    <ul class="navbar-nav mr-auto ">
-                        <li class="nav-item active ">
-                            <a class="nav-link " href="/profile">Profile
-                                <span class="sr-only ">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="/schedule">My Schedule</a>
-                        </li>
-                        <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true "
-                               aria-expanded="false ">
-                                Options
-                            </a>
-                            <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item " href="/report">Report User</a>
-                                <a class="dropdown-item " href="#">Another action</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
+
     <div class="wrapper">
       Here is your schedule:
       <div id="myScheduler"></div>
