Adding the footer

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -41,5 +41,4 @@
 		<input type="submit" class="btn" value="Send" style="position: absolute;right:10%">
 		<!-- end of Textarea and submit button -->
 	</form>
-</body>
-</html>
+<%- include footer.ejs %>
