--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>PickUp</title>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
 
 		<!-- navbar -->
@@ -29,14 +29,14 @@
 						<li class="nav-item ">
 							<a class="nav-link " href="/schedule">My Schedule</a>
 						</li>
-						<li class="nav-item dropdown ">
-							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button " data-toggle="dropdown" aria-haspopup="true "
-							   aria-expanded="false ">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+							   aria-expanded="false">
 								Options
 							</a>
-							<div class="dropdown-menu " aria-labelledby="navbarDropdown">
-								<a class="dropdown-item " href="/report">Report User</a>
-								<a class="dropdown-item " href="#">Another action</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="/report">Report User</a>
+								<a class="dropdown-item" href="#">Another action</a>
 							</div>
 						</li>
 					</ul>
