--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -16,7 +16,7 @@
                 <div class="well well-sm">
                     <div class="row">
                         <div class="media">
-                            <img class="img-thumbnail" src="../thumbnail-images/Profile-avatar-placeholder-large.png" style="height:30%; width: 35%;"
+                            <img class="img-thumbnail" src="/thumbnail-images/Profile-avatar-placeholder-large.png" style="height:75%; width: 35%;"
                                 alt="Generic placeholder image" />
                             <div class="media-body">
 
