--- a/views/report.ejs
+++ b/views/report.ejs
@@ -1,6 +1,10 @@
 <%- include header.ejs %>
 
 <body>
+	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+	<script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
+	<script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
 
 	<form action="/report" method="post" style="margin: 3% 10% 0 10%">
 		<div>
@@ -18,18 +22,22 @@
 		<!-- checkbox -->
 		<div>
 			<p>Reasons:</p>
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" value="" name="cb1">
-						Did not show up
-					</label>
-				</div>
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" value="" name="cb2">
-						Bad behavior
-					</label>
-				</div>
+				<span class="bmd-form-group">
+					<div class="checkbox">
+						<label>
+							<input type="checkbox" value="" name="cb1">
+							Did not show up
+						</label>
+					</div>
+				</span>
+				<span class="bmd-form-group">
+					<div class="checkbox">
+						<label>
+							<input type="checkbox" value="" name="cb2">
+							Bad behavior
+						</label>
+					</div>
+				</span>
 		</div>
 		<!-- end of checkbox -->
 
