--- a/views/display-matches.ejs
+++ b/views/display-matches.ejs
@@ -4,65 +4,7 @@
     <main role="main" class="container">
         <p class="lead"></p>
         <h1>Matches</h1>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Activity</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Matching time slot</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>
-                        <img class="img-fluid"
-                             src="../icons/whois-icon.png"
-                             style="max-width: 50%;">
-                    </th>
-                    <td>Football</td>
-                    <td>John</td>
-                    <td>10:30 am - 11:30 am</td>
-                    <td>
-                        <button class="btn btn-success"
-                                type="button">
-                            CONFIRM
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        <img class="img-fluid"
-                             src="../icons/whois-icon.png"
-                             style="max-width: 50%;">
-                    </th>
-                    <td>Basketball</td>
-                    <td>Marry</td>
-                    <td>2:30 pm - 3:30 pm</td>
-                    <td>
-                        <button class="btn btn-success"
-                                type="button">
-                            CONFIRM
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        <img class="img-fluid"
-                             src="../icons/whois-icon.png"
-                             style="max-width: 50%;">
-                    </th>
-                    <td>Badminton</td>
-                    <td>Peter</td>
-                    <td>7:30 pm - 8:30 pm</td>
-                    <td>
-                        <button class="btn btn-success" type="button">
-                            CONFIRM
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <%- table %>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
