almost finish report with some bugs

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -11,26 +11,8 @@
 <body>
 
 	<div style="margin: 3% 10% 0 10%">
-		<p><%= user2 %></p>
+		<p id="chatuser"><%= user2 %></p>
 		<ul id="chatHistory" class="list-group" style="overflow:hidden; overflow-y:scroll;>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
-			<li class="list-group-item list-group-item-info">First</li>
-			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
 			<li class="list-group-item list-group-item-info">First</li>
 			<li class="list-group-item list-group-item-success" style="text-align: right">Second</li>
 		</ul>
