Changed the profile page buttons and layout to make it more intuitive
Button titles have been changed, and a new button for changing the profile picture has been added. Note that this feature is not functional yet.

--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -52,7 +52,7 @@
                                 <div class="btn-group">
 
                                     <button type="button" class="btn btn-primary" style="padding-left:50px;">
-                                        Add more interests
+                                        Edit Interests
                                     </button>
 
                                     <br>
@@ -60,9 +60,16 @@
                                         View/Edit Schedule
                                     </button>
 
+
+
                                 </div>
                             </div>
                         </div>
+                        <button type="button" class="btn btn-primary">
+                          <input type="file" id="fileinput" accept="image/*" />
+
+
+                        </button>
                     </div>
                 </div>
             </div>
