profile page will load data from database change email domain to cuhk.edu.hk

--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -26,25 +26,16 @@
 
                             <div class="container col-sm-6 col-md-8">
                                 <h4 class="user-name">
-                                    Name of User</h4>
+                                    <%= name %></h4>
                                 <small>
                                     <cite title="Location">CUHK, Hong Kong</cite>
                                     <img src="../icons/location.png" />
                                 </small>
 
                                 <p>
-
-                                    example@link.cuhk.edu.hk
+                                    <%= email %>
                                     <img src="../icons/envelope-closed.svg" alt="envelope-closed" />
-                                    <br /> Hiking
-                                    <img src="../icons/hiking.png" />
-                                    <br /> Cooking
-                                    <img src="../icons/cooking.png" />
-                                    <br /> Tennis
-                                    <img src="../icons/tennis.png" />
-                                    <br /> Badminton
-                                    <img src="../icons/badminton.png" />
-                                    <br />
+                                    <%- interestsPng %>
 
 
                                 </p>
