Login button implemented

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -41,6 +41,9 @@
 								<a class="dropdown-item" href="#">Another action</a>
 							</div>
 						</li>
+						<li id="loginbutton" class="nav-item">
+							<a class="nav-link" href="/">Login</a>
+						</li>
 					</ul>
 				</div>
 			</div>
