--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,8 +9,8 @@ $(document).ready(function(){
     type: 'GET',
     success: function(result) {
       if (result) {
-        let logout_html = "<a class=nav-link href=/logout>Logout</a>"
-        //$('#loginbutton').html(logout_html);
+        let logout_html = "<a class=nav-link href='/logout'>Logout</a>"
+        $('#loginbutton').html(logout_html);
         if (result.user === "admin") {
           let welcome_html = "Welcome, <a href='/admin'>"+result.user+"</a>!"
           //$('#welcomeUser').html(welcome_html);
@@ -21,8 +21,8 @@ $(document).ready(function(){
         }
       }
       else {
-        var login_html = "<a class=nav-link href=/login>Login</a>"
-        //$('#loginbutton').html(login_html);
+        var login_html = "<a class=nav-link href='/'>Login</a>"
+        $('#loginbutton').html(login_html);
         //$('#welcomeUser').html(" ");
       }
     }
